--- a/free-nodes/2025-3-7-free-node-subscribe.htm
+++ b/free-nodes/2025-3-7-free-node-subscribe.htm
@@ -150,6 +150,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/03/0-20250307.yaml</p><p>https://sockscap64.github.io/uploads/2025/03/1-20250307.yaml</p><p>https://sockscap64.github.io/uploads/2025/03/2-20250307.yaml</p><p>https://sockscap64.github.io/uploads/2025/03/3-20250307.yaml</p><p>https://sockscap64.github.io/uploads/2025/03/4-20250307.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://sockscap64.github.io/uploads/2025/03/0-20250307.txt</p><p>https://sockscap64.github.io/uploads/2025/03/1-20250307.txt</p><p>https://sockscap64.github.io/uploads/2025/03/2-20250307.txt</p><p>https://sockscap64.github.io/uploads/2025/03/4-20250307.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/03/20250307.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" rel="nofollow noopener" style="color:#c00;">闲鱼网络</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-3-6-free-node-subscribe-links.htm">3月6日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-3-8-free-subscribe-node.htm">3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -178,16 +179,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-40860.htm" title="免费领养宠物包邮吗现在（免费领养宠物送到家）">免费领养宠物包邮吗现在（免费领养宠物送到家）</a></li>
-                        <li class="py-2"><a href="/news/article-36929.htm" title="领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎">领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎</a></li>
-                        <li class="py-2"><a href="/news/article-65667.htm" title="一片枫叶一片红（一片枫红一叶木落什么意思）">一片枫叶一片红（一片枫红一叶木落什么意思）</a></li>
+                        <li class="py-2"><a href="/news/article-69485.htm" title="动物疫苗怎么注射视频讲解（动物疫苗的使用）">动物疫苗怎么注射视频讲解（动物疫苗的使用）</a></li>
+                        <li class="py-2"><a href="/news/article-48779.htm" title="合肥宠物领养救助站电话地址（合肥宠物领养合肥宠物赠送）">合肥宠物领养救助站电话地址（合肥宠物领养合肥宠物赠送）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-node-subscribe.htm" title="3月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">3月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-63812.htm" title="Java中线程状态+线程安全问题+synchronized的用法详解_java_">Java中线程状态+线程安全问题+synchronized的用法详解_java_</a></li>
-                        <li class="py-2"><a href="/news/article-40861.htm" title="适合穷人养的猫咪（适合穷人养的猫咪品种）">适合穷人养的猫咪（适合穷人养的猫咪品种）</a></li>
-                        <li class="py-2"><a href="/news/article-37413.htm" title="厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）">厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-7-node-share.htm" title="1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-28-node-share-links.htm" title="2月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">2月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-56819.htm" title="AOT和单文件发布对程序性能的影响">AOT和单文件发布对程序性能的影响</a></li>
-                        <li class="py-2"><a href="/news/article-39875.htm" title="CountDownLatch和CyclicBarrier：如何让多线程步调一致">CountDownLatch和CyclicBarrier：如何让多线程步调一致</a></li>
+                        <li class="py-2"><a href="/news/article-51908.htm" title="Mac上解决dose not contain the JNI_CreateJavaVM symbol">Mac上解决dose not contain the JNI_CreateJavaVM symbol</a></li>
+                        <li class="py-2"><a href="/news/article-53503.htm" title="给猫咪驱虫一般多少钱 猫咪驱虫要花多少钱">给猫咪驱虫一般多少钱 猫咪驱虫要花多少钱</a></li>
+                        <li class="py-2"><a href="/news/article-66297.htm" title="动物疫苗法律法规最新文件下载（动物疫苗法律法规最新文件下载）">动物疫苗法律法规最新文件下载（动物疫苗法律法规最新文件下载）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-25-free-subscribe-node.htm" title="2月25日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">2月25日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-26-free-high-speed-nodes.htm" title="2月26日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">2月26日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-19-node-share.htm" title="2月19日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">2月19日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -199,7 +200,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
