--- a/free-nodes/2025-4-11-node-share-links.htm
+++ b/free-nodes/2025-4-11-node-share-links.htm
@@ -145,6 +145,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/04/0-20250411.yaml</p><p>https://sockscap64.github.io/uploads/2025/04/1-20250411.yaml</p><p>https://sockscap64.github.io/uploads/2025/04/2-20250411.yaml</p><p>https://sockscap64.github.io/uploads/2025/04/3-20250411.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://sockscap64.github.io/uploads/2025/04/1-20250411.txt</p><p>https://sockscap64.github.io/uploads/2025/04/2-20250411.txt</p><p>https://sockscap64.github.io/uploads/2025/04/3-20250411.txt</p><p>https://sockscap64.github.io/uploads/2025/04/4-20250411.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/04/20250411.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" rel="nofollow noopener" style="color:#c00;">山水云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm">4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -173,16 +174,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-92438.htm" title="vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】">vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-8-free-subscribe-node.htm" title="3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-80926.htm" title="深圳宠物领养中心在哪个位置呀 深圳宠物领养中心在哪个位置呀电话">深圳宠物领养中心在哪个位置呀 深圳宠物领养中心在哪个位置呀电话</a></li>
-                        <li class="py-2"><a href="/news/article-72094.htm" title="被猫抓伤出一丝丝血要打针吗过了几天了（被猫抓伤有一点点血丝）">被猫抓伤出一丝丝血要打针吗过了几天了（被猫抓伤有一点点血丝）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-node-subscribe-links.htm" title="3月6日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址">3月6日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe.htm" title="3月28日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址">3月28日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-3-free-subscribe-node.htm" title="4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-83733.htm" title="猫打3针疫苗多少钱（猫猫打三针多少钱）">猫打3针疫苗多少钱（猫猫打三针多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-node-subscribe.htm" title="3月16日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">3月16日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-84441.htm" title="打疫苗的时候又被动物抓伤了怎么办?（被打了疫苗的动物咬了）">打疫苗的时候又被动物抓伤了怎么办?（被打了疫苗的动物咬了）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-subscribe-node.htm" title="3月30日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">3月30日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-subscribe-node.htm" title="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" title="4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-68836.htm" title="动物疫苗法规制定 动物疫苗法规制定依据">动物疫苗法规制定 动物疫苗法规制定依据</a></li>
+                        <li class="py-2"><a href="/news/article-80925.htm" title="Python 垃圾回收机制原理详解">Python 垃圾回收机制原理详解</a></li>
+                        <li class="py-2"><a href="/news/article-77470.htm" title="成都宠物领养平台电话是多少号码（成都宠物领养中心电话）">成都宠物领养平台电话是多少号码（成都宠物领养中心电话）</a></li>
+                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
+                        <li class="py-2"><a href="/news/article-83734.htm" title="动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集">动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集</a></li>
+                        <li class="py-2"><a href="/news/article-90252.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
+                        <li class="py-2"><a href="/news/article-80206.htm" title="邮寄猫咪怎么邮寄（如何邮寄猫猫）">邮寄猫咪怎么邮寄（如何邮寄猫猫）</a></li>
                     </ul>
     </div>
 </div>
@@ -194,7 +195,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
