--- a/index.html
+++ b/index.html
@@ -123,6 +123,62 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-15">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-15-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="4月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-15-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、欧洲、美国、香港、韩国、新加坡、加拿大等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-14">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、香港、欧洲、加拿大、韩国、美国、日本等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-13">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-13-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-13-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、日本、加拿大、美国、新加坡、韩国、欧洲等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-12">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、欧洲、美国、日本、新加坡、香港、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-11">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-11-node-share-links.htm" class="xcblog-blog-url">
@@ -347,62 +403,6 @@
                                     这一次的节点更新覆盖了香港、日本、欧洲、美国、新加坡、韩国、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-26">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-26-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="3月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-26-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、新加坡、美国、韩国、欧洲、加拿大、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-25-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-25-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、韩国、美国、新加坡、加拿大、欧洲、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-24">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-24-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="3月24日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-24-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月24日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、日本、香港、韩国、加拿大、新加坡、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-23">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-23-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="3月23日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-23-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月23日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、日本、新加坡、韩国、加拿大、香港、美国等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -412,16 +412,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-11-free-node-subscribe.htm" title="3月11日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">3月11日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-81602.htm" title="宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）">宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）</a></li>
-                        <li class="py-2"><a href="/news/article-75442.htm" title="家装用什么电线管好一点(家装用什么电线管好呢)">家装用什么电线管好一点(家装用什么电线管好呢)</a></li>
-                        <li class="py-2"><a href="/news/article-88048.htm" title="葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)">葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-node-subscribe.htm" title="3月17日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月17日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-90252.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="4月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">4月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-85165.htm" title="为什么代码规范要求SQL语句不要过多的join？">为什么代码规范要求SQL语句不要过多的join？</a></li>
-                        <li class="py-2"><a href="/news/article-91050.htm" title="动物疫苗的使用方法有哪些种类及作用图片（动物疫苗的使用方法有哪些种类及作用图片视频）">动物疫苗的使用方法有哪些种类及作用图片（动物疫苗的使用方法有哪些种类及作用图片视频）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-high-speed-nodes.htm" title="3月18日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">3月18日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-87315.htm" title="动物疫苗接种简报标题新颖（动物预防接种计划表）">动物疫苗接种简报标题新颖（动物预防接种计划表）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-2-node-share.htm" title="3月2日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">3月2日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-80925.htm" title="Python 垃圾回收机制原理详解">Python 垃圾回收机制原理详解</a></li>
+                        <li class="py-2"><a href="/news/article-80207.htm" title="奥尔良牛肉汉堡的做法大全(奥尔良牛肉汉堡的做法视频)">奥尔良牛肉汉堡的做法大全(奥尔良牛肉汉堡的做法视频)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-8-free-subscribe-node.htm" title="3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-91721.htm" title="liunx中搭建python3.7环境和安装pycharm并搭建Django">liunx中搭建python3.7环境和安装pycharm并搭建Django</a></li>
+                        <li class="py-2"><a href="/news/article-89501.htm" title="谁放弃了《快乐大本营》？(快乐到底是谁)">谁放弃了《快乐大本营》？(快乐到底是谁)</a></li>
+                        <li class="py-2"><a href="/news/article-69485.htm" title="动物疫苗怎么注射视频讲解（动物疫苗的使用）">动物疫苗怎么注射视频讲解（动物疫苗的使用）</a></li>
+                        <li class="py-2"><a href="/news/article-76125.htm" title="聊聊分布式一致性算法协议 Paxos">聊聊分布式一致性算法协议 Paxos</a></li>
                     </ul>
     </div>
 </div>
@@ -433,7 +433,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
